--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -112,4 +115,12 @@ span{
 
 .social a:hover{
     color: orange;
+}
+
+.topbar
+{
+    font-family: sans-serif;
+    text-decoration: none;
+    color: orange;
+    font-size: 20px;
 }
